# RoachAcquisitionServer

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-dev  Dockerfile-dev-base  HDF5FileWriter.cpp  HDF5FileWriter.h  KATCPServer.cpp  KATCPServer.h  Main.cpp  README.md  RoachAcquisitionServer.cpp  RoachAcquisitionServer.h  RoachAquisitionServer.cpp  RoachAquisitionServer.h  RoachKATCPClient.cpp  RoachKATCPClient.h  StationControllerKATCPClient.cpp  StationControllerKATCPClient.h  TCPForwardingServer.cpp  TCPForwardingServer.h  startWBS.sh
NoiseDiode/: ndm_B1_lcp_20k_cal.csv  ndm_B1_lcp_5k_cal.csv  ndm_B1_rcp_20k_cal.csv  ndm_B1_rcp_5k_cal.csv  ndm_B2_lcp_20k_cal.csv  ndm_B2_lcp_5k_cal.csv  ndm_B2_rcp_20k_cal.csv  ndm_B2_rcp_5k_cal.csv
SCTestBed/: CMakeLists.txt  KATCPServer.cpp  KATCPServer.h  main.cpp
configfiles/: README.md  dnsmasq.conf  exports
systemd/: RoachAcquisitionServer.service
